force-app/main/default/objects/Animal__c/fields/Current_Animal_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Animal_Status__c</fullName>
    <formula>IF(NOT(ISPICKVAL(Final_Animal_Status__c,&quot;&quot;)), TEXT(Final_Animal_Status__c), 
IF(NOT(ISPICKVAL(Interim_Animal_Status__c,&quot;&quot;)), TEXT(Interim_Animal_Status__c),  TEXT(Intake_Animal_Status__c)))</formula>
    <label>Current Animal Status</label>
    <type>Text</type>
</CustomField>