force-app/main/default/objects/Animal__c/fields/Current_Animal_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Animal_Status_Date__c</fullName>
    <formula>IF(NOT(ISNULL( Second_Status_Change_Date__c )), Second_Status_Change_Date__c,
IF(NOT(ISNULL( First_Status_Change_Date__c )), First_Status_Change_Date__c , DATEVALUE(Intake_Date_Time__c) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Animal Status Date</label>
    <type>Date</type>
</CustomField>