force-app/main/default/objects/Animal__c/fields/Current_Behavior_Grade__c.field-meta.xml
<CustomField>
    <fullName>Current_Behavior_Grade__c</fullName>
    <label>Current Behavior Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>No Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>