force-app/main/default/objects/Animal__c/fields/Current_Behavior_Grade_Change_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Behavior_Grade_Change_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Current Behavior Grade Change Date</label>
    <type>Date</type>
</CustomField>