force-app/main/default/objects/Animal__c/fields/Current_Behavior_Grade_Initials__c.field-meta.xml
<CustomField>
    <fullName>Current_Behavior_Grade_Initials__c</fullName>
    <label>Current Behavior Grade Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>