force-app/main/default/objects/Animal__c/fields/Current_Behavior_Status_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Behavior_Status_Notes__c</fullName>
    <label>Current Behavior Status Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>