force-app/main/default/objects/Animal__c/fields/Current_Legal_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Legal_Status__c</fullName>
    <label>Current Legal Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>