force-app/main/default/objects/Animal__c/fields/Current_Legal_Status_Changed_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Legal_Status_Changed_Date__c</fullName>
    <label>Current Legal Status Changed Date</label>
    <type>Date</type>
</CustomField>