force-app/main/default/objects/Animal__c/fields/Current_Legal_Status_Live_Dead__c.field-meta.xml
<CustomField>
    <fullName>Current_Legal_Status_Live_Dead__c</fullName>
    <formula>Current_Legal_Status__c &amp; if( ISBLANK(TEXT(Live_or_Dead__c)),&quot;&quot; , &quot; (&quot; &amp; TEXT(Live_or_Dead__c) &amp; &quot;)&quot;)</formula>
    <label>Current Legal Status (Live/Dead)</label>
    <type>Text</type>
</CustomField>