force-app/main/default/objects/Animal__c/fields/Current_Location_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Location_Date__c</fullName>
    <label>Current Location Date</label>
    <type>Date</type>
</CustomField>