force-app/main/default/objects/Animal__c/fields/Current_Playgroup_Summary_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Playgroup_Summary_Notes__c</fullName>
    <label>Current Playgroup Summary Notes</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>