force-app/main/default/objects/Animal__c/fields/Current_Recent_Shelter_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Recent_Shelter_Location__c</fullName>
    <label>Current/Recent Shelter Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>