force-app/main/default/objects/Animal__c/fields/Current_Recent_Shelter_Location_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Recent_Shelter_Location_Date__c</fullName>
    <label>Current/Recent Shelter Location Date</label>
    <type>Date</type>
</CustomField>