force-app/main/default/objects/Animal__c/fields/Current_Weight_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Weight_Date__c</fullName>
    <label>Current Weight Date</label>
    <type>Date</type>
</CustomField>