force-app/main/default/objects/Animal__c/fields/Current_Weight_in_kgs__c.field-meta.xml
<CustomField>
    <fullName>Current_Weight_in_kgs__c</fullName>
    <label>Current Weight in kgs</label>
    <length>10</length>
    <type>Text</type>
</CustomField>