force-app/main/default/objects/Animal__c/fields/Current_Weight_in_lbs_Num__c.field-meta.xml
<CustomField>
    <fullName>Current_Weight_in_lbs_Num__c</fullName>
    <label>Current Weight (in lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>