force-app/main/default/objects/Animal__c/fields/Date_of_Adoption__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Adoption__c</fullName>
    <inlineHelpText>ONLY for adoptions that have occurred after placement. Not for direct adoptions.</inlineHelpText>
    <label>Date of Adoption</label>
    <type>Date</type>
</CustomField>