force-app/main/default/objects/Animal__c/fields/Date_of_Cremation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cremation__c</fullName>
    <label>Date of Cremation</label>
    <type>Date</type>
</CustomField>