force-app/main/default/objects/Animal__c/fields/Date_Owner_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Date_Owner_Contacted__c</fullName>
    <label>Date Owner Contacted</label>
    <type>Date</type>
</CustomField>