force-app/main/default/objects/Animal__c/fields/Date_Playgroup_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Date_Playgroup_Assigned__c</fullName>
    <label>Date Playgroup Assigned</label>
    <type>DateTime</type>
</CustomField>