force-app/main/default/objects/Animal__c/fields/Days_in_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Treatment__c</fullName>
    <description>calculate # of days in treatment</description>
    <formula>Final_Outcome_Date__c -  Treatment_Start_Date__c</formula>
    <label># of Days in Treatment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>