force-app/main/default/objects/Animal__c/fields/Decline_Rehab_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Rehab_Reason__c</fullName>
    <label>Decline Rehab Reason</label>
    <length>250</length>
    <type>Text</type>
</CustomField>