force-app/main/default/objects/Animal__c/fields/Designated_Handler__c.field-meta.xml
<CustomField>
    <fullName>Designated_Handler__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designated Handler</label>
    <type>Checkbox</type>
</CustomField>