force-app/main/default/objects/Animal__c/fields/Designated_Handler_Medical__c.field-meta.xml
<CustomField>
    <fullName>Designated_Handler_Medical__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designated Handler - Medical</label>
    <type>Checkbox</type>
</CustomField>