force-app/main/default/objects/Animal__c/fields/Designated_Handler_Reason__c.field-meta.xml
<CustomField>
    <fullName>Designated_Handler_Reason__c</fullName>
    <label>Designated Handler Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>