force-app/main/default/objects/Animal__c/fields/Diet_Type__c.field-meta.xml
<CustomField>
    <fullName>Diet_Type__c</fullName>
    <label>Diet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>119 Special</fullName>
            </value>
            <value>
                <fullName>123 Special</fullName>
            </value>
            <value>
                <fullName>308 Special</fullName>
            </value>
            <value>
                <fullName>406 Special</fullName>
            </value>
            <value>
                <fullName>411 Special</fullName>
            </value>
            <value>
                <fullName>413 Special</fullName>
            </value>
            <value>
                <fullName>416 Special</fullName>
            </value>
            <value>
                <fullName>Adult Mix</fullName>
            </value>
            <value>
                <fullName>Chicken Diet</fullName>
            </value>
            <value>
                <fullName>Not Assigned</fullName>
            </value>
            <value>
                <fullName>Puppy Mix</fullName>
            </value>
            <value>
                <fullName>Sci Diet AD</fullName>
            </value>
            <value>
                <fullName>Sci Diet ID</fullName>
            </value>
            <value>
                <fullName>Special Diet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>