force-app/main/default/objects/Animal__c/fields/Disaster_Hold_Type__c.field-meta.xml
<CustomField>
    <fullName>Disaster_Hold_Type__c</fullName>
    <label>Disaster Hold Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Surrendered</fullName>
            </value>
            <value>
                <fullName>Stray</fullName>
            </value>
            <value>
                <fullName>Confiscated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>