force-app/main/default/objects/Animal__c/fields/Discharge_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Date_Time__c</fullName>
    <label>Discharge Date/Time</label>
    <type>DateTime</type>
</CustomField>