force-app/main/default/objects/Animal__c/fields/Discharge_Type__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Type__c</fullName>
    <label>Discharge Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adopted</fullName>
            </value>
            <value>
                <fullName>Deceased</fullName>
            </value>
            <value>
                <fullName>Discharged to board and train</fullName>
            </value>
            <value>
                <fullName>Euthanized</fullName>
            </value>
            <value>
                <fullName>Internal ASPCA Foster Transfer</fullName>
            </value>
            <value>
                <fullName>Internal ASPCA Placement Transfer</fullName>
            </value>
            <value>
                <fullName>Returned to Caregiver</fullName>
            </value>
            <value>
                <fullName>Returned to Owner</fullName>
            </value>
            <value>
                <fullName>Transferred to Boarding</fullName>
            </value>
            <value>
                <fullName>Transferred to Clinic</fullName>
            </value>
            <value>
                <fullName>Transferred to Foster</fullName>
            </value>
            <value>
                <fullName>Transferred to Rehab</fullName>
            </value>
            <value>
                <fullName>Transferred to Response Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>