force-app/main/default/objects/Animal__c/fields/Discharge_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Discharge_Update_Date__c</fullName>
    <label>Discharge Update Date</label>
    <type>Date</type>
</CustomField>