force-app/main/default/objects/Animal__c/fields/Discharged_to_Agency__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discharged to Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>