force-app/main/default/objects/Animal__c/fields/Discharged_to_Agency_Email__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to_Agency_Email__c</fullName>
    <formula>Discharged_to_Agency__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged to Agency email</label>
    <type>Text</type>
</CustomField>