force-app/main/default/objects/Animal__c/fields/Discharged_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discharged to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Animals (Discharged to Contact)</relationshipLabel>
    <relationshipName>Animals1</relationshipName>
    <type>Lookup</type>
</CustomField>