force-app/main/default/objects/Animal__c/fields/Discharged_to_Contact_email__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to_Contact_email__c</fullName>
    <formula>Discharged_to_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged to Contact email</label>
    <type>Text</type>
</CustomField>