force-app/main/default/objects/Animal__c/fields/Discharged_to_Contact_phone__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to_Contact_phone__c</fullName>
    <formula>Discharged_to_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discharged to Contact phone</label>
    <type>Text</type>
</CustomField>