force-app/main/default/objects/Animal__c/fields/Discharged_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Discharged_to_Name__c</fullName>
    <formula>IF(!ISBLANK(Discharged_to_Contact__c), Discharged_to_Contact__r.FirstName, Discharged_to_Agency__r.Name)</formula>
    <label>Discharged to Name</label>
    <type>Text</type>
</CustomField>