force-app/main/default/objects/Animal__c/fields/Disposition_Status__c.field-meta.xml
<CustomField>
    <fullName>Disposition_Status__c</fullName>
    <label>Disposition Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Owned- Able to be fostered</fullName>
            </value>
            <value>
                <fullName>Owned- Not able to be fostered</fullName>
            </value>
            <value>
                <fullName>Surrendered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>