force-app/main/default/objects/Animal__c/fields/Do_Not_Play_Request__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Play_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Play Request</label>
    <type>Checkbox</type>
</CustomField>