force-app/main/default/objects/Animal__c/fields/Does_Not_Walk_on_a_Leash__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Walk_on_a_Leash__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does Not Walk on a Leash</label>
    <type>Checkbox</type>
</CustomField>