force-app/main/default/objects/Animal__c/fields/Does_Not_Walk_on_a_Leash_Notes__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Walk_on_a_Leash_Notes__c</fullName>
    <label>Does Not Walk on a Leash Notes</label>
    <length>2768</length>
    <type>LongTextArea</type>
</CustomField>