force-app/main/default/objects/Animal__c/fields/Email_Notification__c.field-meta.xml
<CustomField>
    <fullName>Email_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Automatic email sent to caseworker and manager when ownership is granted use the surrender field to trigger</description>
    <label>Email Notification</label>
    <type>Checkbox</type>
</CustomField>