force-app/main/default/objects/Animal__c/fields/Enrichment_Priority__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Priority__c</fullName>
    <formula>TEXT(Treatment_Plan__r.Enrichment_Priority__c)</formula>
    <label>Enrichment Priority</label>
    <type>Text</type>
</CustomField>