force-app/main/default/objects/Animal__c/fields/Enrichment_Priority_Minus_This_Week__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Priority_Minus_This_Week__c</fullName>
    <formula>Enrichment_Priority_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrichment Priority Minus # This Week</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>