force-app/main/default/objects/Animal__c/fields/Enrichment_Priority_Number__c.field-meta.xml
<CustomField>
    <fullName>Enrichment_Priority_Number__c</fullName>
    <formula>IF(Enrichment_Priority__c=&apos;Daily – 7 days&apos;, 7, IF(Enrichment_Priority__c=&apos;High – 5 days&apos;, 5, IF(Enrichment_Priority__c=&apos;Low – 3 days&apos;, 3, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrichment Priority Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>