force-app/main/default/objects/Animal__c/fields/Equine_Body_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Equine_Body_Pattern__c</fullName>
    <label>Equine Body Pattern</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Animal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Equine_Body_Pattern</valueSetName>
    </valueSet>
</CustomField>