force-app/main/default/objects/Animal__c/fields/Equine_Leg_Marking__c.field-meta.xml
<CustomField>
    <fullName>Equine_Leg_Marking__c</fullName>
    <inlineHelpText>LF = left front, RR = right rear. Select none if no leg markings.</inlineHelpText>
    <label>Equine Leg Marking</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type_of_Animal__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Equine_Leg_Marking</valueSetName>
    </valueSet>
</CustomField>