force-app/main/default/objects/Animal__c/fields/Estimated_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_Birth__c</fullName>
    <label>Estimated Date of Birth</label>
    <type>Date</type>
</CustomField>