force-app/main/default/objects/Animal__c/fields/Euthanasia_Date__c.field-meta.xml
<CustomField>
    <fullName>Euthanasia_Date__c</fullName>
    <label>Euthanasia Date</label>
    <type>Date</type>
</CustomField>