force-app/main/default/objects/Animal__c/fields/Euthanisia_Reason__c.field-meta.xml
<CustomField>
    <fullName>Euthanisia_Reason__c</fullName>
    <label>Euthanasia Reason</label>
    <length>80</length>
    <type>Text</type>
</CustomField>