force-app/main/default/objects/Animal__c/fields/Evaluation_Count__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Count__c</fullName>
    <label>Evaluation Count</label>
    <summaryForeignKey>Behavior_Evaluation__c.Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>