force-app/main/default/objects/Animal__c/fields/Evaluation_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Date__c</fullName>
    <description>Date of first behavior evaluation</description>
    <label>Evaluation Date</label>
    <type>Date</type>
</CustomField>