force-app/main/default/objects/Animal__c/fields/Evaluation_Dog_Aggression_with_Caution__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Dog_Aggression_with_Caution__c</fullName>
    <label>Evaluation Dog Aggression with Caution</label>
    <summaryFilterItems>
        <field>Behavior_Evaluation__c.Dogs_that_need_a_Dog_Dog_Test__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Behavior_Evaluation__c.Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>