force-app/main/default/objects/Animal__c/fields/Evaluation_Dog_Dog_Testing_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Dog_Dog_Testing_Date__c</fullName>
    <label>Evaluation Dog/Dog Testing Date</label>
    <summarizedField>Behavior_Evaluation__c.Dog_Dog_Testing_Date__c</summarizedField>
    <summaryForeignKey>Behavior_Evaluation__c.Animal__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>