force-app/main/default/objects/Animal__c/fields/Evaluation_Dog_Dog_Testing_Done__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Dog_Dog_Testing_Done__c</fullName>
    <label>Evaluation Dog/Dog Testing Done</label>
    <summaryFilterItems>
        <field>Behavior_Evaluation__c.Dog_Dog_Testing_Done__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Behavior_Evaluation__c.Animal__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>