force-app/main/default/objects/Animal__c/fields/Evaluation_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Due_Date__c</fullName>
    <label>Evaluation Due Date</label>
    <type>Date</type>
</CustomField>