force-app/main/default/objects/Animal__c/fields/Evaluation_Re_Test__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Re_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check the box if more than one behavior evaluation has been conducted</inlineHelpText>
    <label>Evaluation Re-Test</label>
    <type>Checkbox</type>
</CustomField>