force-app/main/default/objects/Animal__c/fields/Evaluation_Re_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Re_Test_Date__c</fullName>
    <label>Evaluation Re-Test Date</label>
    <type>Date</type>
</CustomField>