force-app/main/default/objects/Animal__c/fields/Evaluation_Type__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Type</label>
    <referenceTo>Evaluation_Type__c</referenceTo>
    <relationshipLabel>Animals</relationshipLabel>
    <relationshipName>Animals</relationshipName>
    <type>Lookup</type>
</CustomField>