force-app/main/default/objects/Animal__c/fields/Extra_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Extra_Enrichment__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if extra enrichment has been approved for this animal.</inlineHelpText>
    <label>Extra Enrichment</label>
    <type>Checkbox</type>
</CustomField>