force-app/main/default/objects/Animal__c/fields/Extra_Enrichment_Notes__c.field-meta.xml
<CustomField>
    <fullName>Extra_Enrichment_Notes__c</fullName>
    <label>Extra Enrichment Notes</label>
    <type>TextArea</type>
</CustomField>