force-app/main/default/objects/Animal__c/fields/Feeding_Amount_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Feeding_Amount_Inactive__c</fullName>
    <inlineHelpText>SD = Special Diet.</inlineHelpText>
    <label>Feeding Amount (INACTIVE)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>XXS</fullName>
            </value>
            <value>
                <fullName>XXS – mixed with canned</fullName>
            </value>
            <value>
                <fullName>XS</fullName>
            </value>
            <value>
                <fullName>XS - Mixed with canned</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>S – Mixed with canned</fullName>
            </value>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>M – Mixed with canned</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>L – Mixed with canned</fullName>
            </value>
            <value>
                <fullName>XL</fullName>
            </value>
            <value>
                <fullName>XL – Mixed with canned</fullName>
            </value>
            <value>
                <fullName>XXL</fullName>
            </value>
            <value>
                <fullName>XXL – mixed with canned</fullName>
            </value>
            <value>
                <fullName>Puppy XS - TID</fullName>
            </value>
            <value>
                <fullName>Puppy S – TID</fullName>
            </value>
            <value>
                <fullName>Puppy M – TID</fullName>
            </value>
            <value>
                <fullName>Puppy L – TID</fullName>
            </value>
            <value>
                <fullName>Puppy XL – TID</fullName>
            </value>
            <value>
                <fullName>Wet Food Only</fullName>
            </value>
            <value>
                <fullName>Free Feed Dry</fullName>
            </value>
            <value>
                <fullName>Nursing Mom Free Feed Dry Puppy + Wet food 3x Daily</fullName>
            </value>
            <value>
                <fullName>Behavior Feeding Program (list amount in SD Details)</fullName>
            </value>
            <value>
                <fullName>SD (Special Diet) Record info below</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>