force-app/main/default/objects/Animal__c/fields/Feeding_Notes__c.field-meta.xml
<CustomField>
    <fullName>Feeding_Notes__c</fullName>
    <label>Feeding Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>