force-app/main/default/objects/Animal__c/fields/Field_Capture_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Field_Capture_Date_Time__c</fullName>
    <label>Field Capture Date/Time</label>
    <type>DateTime</type>
</CustomField>