force-app/main/default/objects/Animal__c/fields/Field_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Field_Identification_Number__c</fullName>
    <label>Field Identification Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>